--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "md5": "^2.3.0",
     "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
