--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@angular/service-worker": "~10.2.0",
+    "@ngrx/store": "^11.1.1",
     "md5": "^2.3.0",
+    "ngrx-store-localstorage": "^11.0.0",
     "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.0",
     "subsink": "^1.0.2",
