--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --prod && node server.js",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start-pwa": "ng build --prod --base-href http://127.0.0.1:8080/ && http-server -p 8080 -c-1 dist/applaudo-tech-test",
-    "heroku-postbuild": "ng build --prod && node server.js"
+    "postinstall": "ng build --aot --prod && npm start",
+    "heroku-postbuild": "ng build --aot --prod && npm start"
   },
   "private": true,
   "dependencies": {
