--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build --aot --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod",
-    "heroku-postbuild": "node server.js"
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
