--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "@angular/router": "~11.2.11",
     "@angular/service-worker": "~11.2.11",
     "@ngrx/store": "^11.1.1",
-    "http-server": "^0.12.3",
+    "express": "^4.17.1",
     "md5": "^2.3.0",
     "ngrx-store-localstorage": "^11.0.0",
     "ngx-infinite-scroll": "^10.0.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "subsink": "^1.0.2",
     "tslib": "^2.0.0",
